--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-    <div class="back absolute -z-10">
+    <div class="back absolute -z-10 inset-x-0 top-0 mx-auto">
         <svg width="1106" height="1069" viewBox="0 0 1106 1069" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M1 -13V1069" stroke="#DADADA"/>
             <path d="M139 -13V1069" stroke="#DADADA"/>
@@ -33,8 +33,7 @@
             <path d="M829 -13V1069" stroke="#DADADA"/>
             <path d="M967 -13V1069" stroke="#DADADA"/>
             <path d="M1105 -13V1069" stroke="#DADADA"/>
-            </svg>
-            
+        </svg>
     </div>
     <!-- nav -->
     <div class="nav px-[24px] py-[42px] flex justify-between items-center md:px-[70px] lg:justify-around">
