--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
  
                 
-                <h2 class="montserrat text-[15px]">5/5</h2>
+                <h2 class="five montserrat text-[15px]">1/5</h2>
 
                 <div class="right-button cursor-pointer">
                     <svg width="25" height="44" viewBox="0 0 25 44" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -171,7 +171,7 @@
 
     <!-- quate section -->
     <div class="quate relative lg:flex justify-center lg:ml-[177px]">
-        <img class="w-full object-cover h-[483px] lg:w-[1440px] lg:h-[704px]" src="img/middl.jpg" alt="Photography">
+        <img class="w-full object-cover h-[483px]  lg:h-[704px]" src="img/middl.jpg" alt="Photography">
         <h1 class="absolute inset-0 flex items-center justify-center text-[24px] text-white playfare text-center px-[24px] w-[308px] left-1/2 transform -translate-x-1/2 md:text-[40px] md:w-[632px]">
             Graceful designs, expert craftsmanship, and meticulous detail, enhancing the visual appeal and professionalism of your brand
         </h1>
