--- a/about.html
+++ b/about.html
@@ -87,35 +87,44 @@
 
         <!-- main content -->
 
-        <div class="about-us-section">
-            <div class="top-section">
+        <div class="mm lg:flex lg:justify-center">
+        <div class="about-us-section  mt-10 px-[24px] md:px-[70px] ">
+            <div class="top-section lg:flex lg:justify-around lg:items-end">
                 <div class="h-text">
-                    <p class="uppercase montserrat text-[14px]">About</p>
-                    <h1 class="text-[48px] playfare">Exceptional moments <span class="playfare-it">captured through</span> our expert lens</h1>
+                    <p class="uppercase montserrat text-[14px]">About us</p>
+                    <h1 class="text-[48px] playfare w-[338px] leading-tight absolute z-20 md:text-[80px] md:w-[622px] md:static lg:w-[895px]">Exceptional moments <span class="playfare-it">captured through our <span class="text-white md:text-black">expert lensspan</span></h1>
                 </div>
-                <div class="l-test">
-                    <p class="sen text-[14px] lightg">Our services are designed to deliver stunning, high-quality photography that exceeds your expectations</p>
+                <div class="l-test hidden md:block">
+                    <p class="sen text-[14px] lightg w-[336px]">Our services are designed to deliver stunning, high-quality photography that exceeds your expectations</p>
                 </div>
             </div>
 
-            <div class="image-section">
-                <img src="img/abouthero1.jpg" alt="photography">
+            <div class="image-section relative mt-60 md:mt-5 lg:flex lg:flex-row-reverse lg:items-end">
                 <img src="img/abouthero2.jpg" alt="photography">
-                <p class="insp absolute uppercase text-[48px] poppins brown-c bottom-0 z-10 md:text-[80px] md:w-[409px] md:ml-[580px] md:-bottom-24 md:leading-tight lg:-bottom-20">
+                <img src="img/abouthero1.jpg" alt="photography">
+                <p class="insp absolute uppercase text-[48px] poppins brown-c bottom-28 z-10 md:text-[80px] md:w-[409px] md:ml-[280px] md:-bottom-1 md:leading-tight lg:-bottom-20">
                     Inspired Imagery
                 </p>
+
+                <div class="l-test md:hidden">
+                    <p class="sen text-[14px] lightg w-[207px] mt-10">Our services are designed to deliver stunning, high-quality photography that exceeds your expectations</p>
+                </div>
+                
+
             </div>
 
         </div>
+    </div>
 
         <!-- ABOUT US -->
 
-    <div class="about-us mt-48 flex flex-col items-center">
+    <div class="about-us mt-16 flex flex-col items-center md:mt-28 lg:mt-52">
         <div class="px-[24px] about-section bg-bl pt-10 w-[100%] flex flex-col items-center md:w-[90%] md:items-start md:-ml-24 md:px-[70px] lg:items-center lg:pb-20">
             <p class="text-[14px] montserrat text-white text-center lg:mr-[600px]">ABOUT US</p>
             <div class="ab flex justify-center relative z-10">
                 <h1 class="text-[48px] playfare text-white w-[292px] leading-tight z-10 md:text-[80px] md:w-[444px] lg:text-[96px] lg:w-[720px]">Beyond photographs, <span class="playfare-it">we create</span> exquisite <br>fine art</h1>
-                <img class="mt-72 w-[214px]  ml-36 object-cover absolute md:ml-[520px] md:w-[308px] lg:ml-[720px] lg:mt-20 lg:w-[440px]" src="img/abouus.jpg" alt="about">
+                <img class="mt-72 w-[214px]  ml-36 object-cover absolute md:ml-[520px] md:w-[308px] lg:ml-[720px] lg:mt-20 lg:w-[440px]" src="img/about midd.jpg" alt="about">
+                <img class="mt-72 w-[214px]  ml-36 object-cover absolute md:ml-[520px] md:w-[308px] lg:ml-[720px] lg:mt-20 lg:w-[440px]" src="img/about mid2.jpg" alt="about">
             </div>
             <div class="exel flex flex-col items-center">
                 <h1 class="Excepti text-[32px] text-white playfare mt-40 relative z-20 w-[274px] lg:w-[560px] lg:mt-12 lg:mr-48 lg:text-[46px] lg:leading-tight">Exceptional Photography and Art Studio Crafting Timeless Visual Masterpieces</h1>
