--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
 
         <!-- main content -->
 
-            <div class="c  lg:flex justify-center">
+            <div class="c  lg:flex justify-center lg:mt-7 lg:mb-28">
                 <div class="contact-us-top mt-10 px-[24px] md:px-[70px]">
                     <div class="h-text md:flex justify-around md:gap-10 lg:justify-between lg:gap-[300px]">
                         <div class="si flex flex-col lg:w-[353px]">
@@ -161,7 +161,7 @@
        
 
              <!-- CLIENTS -->
-             <div class="clent mt-14 px-[24px] flex flex-col items-end md:px-[70px] lg:items-center lg:ml-48">
+             <div class="clent mt-14 px-[24px] flex flex-col items-end md:px-[70px] lg:items-center lg:ml-48 lg:mt-9">
                 <p class="text-[14px] montserrat uppercase text-right w-[120px]">CLIENTS</p>
                 <h1 class="text-[48px] playfare-it leading-tight text-right w-[309px] md:text-[80px] md:w-[603px] lg:w-[830px]" >RELIED on by CLIENTS in various INDUSTRIES</h1>
              </div>
