--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
     <!-- Viewpoints section -->
      <div class="viewpoints lg:flex flex-col lg:items-center">
-        <div class="viewsection bg-bl py-16 px-[24px] md:px-[70px] w-[95%] ml-5 md:w-[90%] md:ml-28 lg:w-[85%] lg:ml-[150px] lg:flex flex-col items-center">
+        <div class="viewsection bg-bl py-16 px-[24px] md:px-[70px] w-[95%] ml-5 md:w-[90%] md:ml-28 lg:w-[100%] lg:m-0 lg:flex flex-col items-center">
             <div class="line absolute w-[360px] overflow-hidden md:w-[762px] lg:w-[1024px]">
                 <svg width="1106" height="1410" viewBox="0 0 1106 1410" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M1 0V1410" stroke="#DADADA" stroke-opacity="0.5"/>
