--- a/about.html
+++ b/about.html
@@ -37,6 +37,15 @@
             <path d="M1105 -13V1069" stroke="#DADADA"/>
         </svg>
     </div>
+
+        <!-- scroll to top -->
+        <button id="scrollToTop" class="hidden fixed bottom-8 right-8 lightg-bg text-white p-3 rounded-full ">
+            <!-- Arrow icon -->
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M5 10l7-7m0 0l7 7m-7-7v18" />
+            </svg>
+        </button>
+        
     <!-- nav -->
     <div class="nav px-[24px] py-[42px] flex justify-between items-center md:px-[70px] lg:justify-around">
         <a href="index.html"><svg width="64" height="51" viewBox="0 0 64 51" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -118,15 +127,15 @@
 
         <!-- ABOUT US -->
 
-    <div class="about-uss mt-16 flex flex-col items-center md:mt-28 lg:mt-52">
+    <div class="about-uscs mt-16 flex flex-col items-center md:mt-28 lg:mt-52">
         <div class="px-[24px] about-section bg-bl pt-10 w-[100%] flex flex-col items-center md:w-[90%] md:items-start md:-ml-36 md:px-[70px] lg:items-center lg:pb-20">
             <p class="text-[14px] montserrat text-white text-center lg:mr-[600px]">ABOUT US</p>
-            <div class="abs flex justify-center relative z-10">
+            <div class="abcs flex justify-center relative z-10">
                 <h1 class="text-[48px] playfare text-white w-[292px] leading-tight z-[99] md:text-[80px] md:w-[444px] lg:text-[96px] lg:w-[720px]">Beyond photographs, <span class="playfare-it">we create</span> exquisite <br>fine art</h1>
-                <img class="mt-72 w-[214px]  ml-36 object-cover absolute md:ml-[520px] md:w-[308px] lg:ml-[780px] lg:mt-20 lg:w-[440px]" src="img/about midd.jpg" alt="about">
-                <img class="mt-72 w-[214px]  ml-36 object-cover absolute hidden md:block md:ml-[520px] md:w-[308px] lg:ml-[720px] md:mt-[800px] lg:w-[440px]" src="img/about mid2.jpg" alt="about">
+                <img class="imgcg mt-72 w-[214px]  ml-36 object-cover absolute md:ml-[520px] md:w-[308px] lg:ml-[780px] lg:mt-20 lg:w-[440px]" src="img/about midd.jpg" alt="about">
+                <img class="imgcgg mt-72 w-[214px]  ml-36 object-cover absolute hidden md:block md:ml-[520px] md:w-[308px] lg:ml-[720px] md:mt-[800px] lg:w-[440px]" src="img/about mid2.jpg" alt="about">
             </div>
-            <div class="exels flex flex-col items-center">
+            <div class="exelccs flex flex-col items-center">
                 <h1 class="Excepti text-[32px] text-white playfare mt-40 relative z-20 w-[274px] lg:w-[560px] lg:mt-12 lg:mr-48 lg:text-[46px] lg:leading-tight">Exceptional Photography and Art Studio Crafting Timeless Visual Masterpieces</h1>
                 <p class="studio text-[14px] z-[15] text-white sen mt-3 pb-3 w-[314px] lg:w-[500px] lg:mr-[300px]">At our studio, we specialize in capturing the essence of every moment with unparalleled artistry. Our team is dedicated to transforming each image into a timeless piece of art, ensuring that every detail reflects the highest standards of quality and creativity</p>
                 <p class="studio text-[14px] z-[15] text-white sen mt-3 pb-3 w-[314px] lg:w-[500px] lg:mr-[300px]">Our commitment to excellence drives us to continually refine our techniques and expand our creative horizons. We approach each project with a fresh perspective, ensuring that your vision is brought to life in the most captivating and meaningful way. Whether it’s a portrait, a landscape, or a special event, we treat every shot as an opportunity to create something truly unique</p>
