--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
             <path d="M1105 -13V1069" stroke="#DADADA"/>
         </svg>
     </div>
+
+    <!-- scroll to top -->
+    <button id="scrollToTop" class="hidden fixed bottom-8 right-8 lightg-bg text-white p-3 rounded-full ">
+        <!-- Arrow icon -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M5 10l7-7m0 0l7 7m-7-7v18" />
+        </svg>
+    </button>
+
     <!-- nav -->
     <div class="nav px-[24px] py-[42px] flex justify-between items-center md:px-[70px] lg:justify-around">
         <a href="index.html"><svg width="64" height="51" viewBox="0 0 64 51" fill="none" xmlns="http://www.w3.org/2000/svg">
